# advent_of_code_2024

./: .pre-commit-config.yaml  README.md  pyproject.toml
advent_of_code/day_1/: full_assignment.txt
advent_of_code/day_1/puzzle_1/: solution.py
advent_of_code/day_1/puzzle_2/: solution.py
advent_of_code/day_10/puzzle_1/: solution.py
advent_of_code/day_10/puzzle_2/: solution.py
advent_of_code/day_11/puzzle_1/: solution.py
advent_of_code/day_11/puzzle_2/: solution.py
advent_of_code/day_12/puzzle_1/: solution.py
advent_of_code/day_12/puzzle_2/: solution.py
advent_of_code/day_13/puzzle_1/: solution.py
advent_of_code/day_13/puzzle_2/: solution.py
advent_of_code/day_14/puzzle_1/: solution.py
advent_of_code/day_14/puzzle_2/: solution.py
advent_of_code/day_15/puzzle_1/: solution.py
advent_of_code/day_15/puzzle_2/: final_grid.txt  solution.py  solution_old.py
advent_of_code/day_2/puzzle_1/: solution.py
advent_of_code/day_2/puzzle_2/: solution.py
advent_of_code/day_3/puzzle_1/: solution.py
advent_of_code/day_3/puzzle_2/: solution.py
advent_of_code/day_4/puzzle_1/: solution.py
advent_of_code/day_4/puzzle_2/: solution.py
advent_of_code/day_5/puzzle_1/: solution.py
advent_of_code/day_5/puzzle_2/: solution.py
advent_of_code/day_6/puzzle_1/: solution.py
advent_of_code/day_6/puzzle_2/: solution.py  solution_old.py
advent_of_code/day_7/: full_assignment.txt
advent_of_code/day_7/puzzle_1/: solution.py
advent_of_code/day_7/puzzle_2/: solution.py
advent_of_code/day_8/puzzle_1/: solution.py
notebooks/: exploration_notebook.ipynb
(+5 files in other folders)
