[tool.poetry]
name = "advent-of-code-2024"
version = "0.1.0"
description = "Project for the advent of code solutions"
authors = ["Martijn <martijn@acmetric.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
polars = "^1.13.0"
numpy = "^2.1.3"
ipykernel = "^6.13.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.13.0"
# testing tools
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
# precommit and linting
pre-commit = "=2.21.0"
mypy = "=1.6.0"
black = "=22.3.0"
flake8 = "=4.0.1"
ruff = "=0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
